css/civicrm.css
/* ... */
/*Styles for Context menu */

#crm-container .contextMenu {
    position   : absolute;
    z-index    : 9999;
    border     : none;
    padding    : 5px 0 0 0px;
    margin     : 0px;
    display    : none;
    width      : 132px;
    background:transparent url(../i/dropdown-pointer.gif) no-repeat scroll 10px 1px;
}

#squeeze .contextMenu {
    margin     : -95px 0px 0px -275px;
}

#crm-container .contextMenu li {
    background-image: none;
    list-style : none;
    padding    : 2px;
    margin     : 0px;
}

#crm-container .contextMenu a {
    text-decoration     : none;
    display             : block;
    line-height         : 20px;
    height              : 20px;
    background-position : 6px center;
    background-repeat   : no-repeat;
    outline             : none;
    padding             : 0px 0px 1px 5px;
}



/*class for CMS user name check used in profile*/
.cmsmessagebox {
    position    : absolute;
    width       : auto;
    margin-left : 10px;
    padding     : 3px;
}

/* class for text area resizer jquery plugin*/
div.grippie {
    background   : #EEEEEE url('../i/grippie.png') no-repeat scroll center 2px;
    border-color : #DDDDDD;
    border-style : solid;
    border-width : 0pt 1px 1px;
    cursor       : s-resize;
    height       : 9px;
    overflow     : hidden;
}
.resizable-textarea textarea {
    display       : block;
    margin-bottom : 0pt;
    width         : 95%;
    height        : 20%;
}


.crm-tab-button {
    border-bottom:0 none !important;
    float:left;
    margin:0 0.2em 1px 0;
    padding:0;
    position:relative;
    top:1px;
    white-space:nowrap;
}

.ui-tabs .ui-tabs-nav {
    border:none;
    background-image: none;
    padding:4px;
}

.crm-tab-button a,
.ui-tabs .ui-tabs-nav li a, 
.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-selected a,
.ui-tabs .ui-tabs-nav li.ui-tabs-selected a {
    font-size: 0.9em;
}

#mainTabContainer li.crm-tab-button {margin:0 2px 2px 0;}

.ui-tabs .ui-tabs-nav li.ui-tabs-selected { padding-bottom:0px; border:none; }

.crm-tab-button a,
.ui-tabs .ui-tabs-nav li a {
    padding: 5px !important;
}

.crm-tab-button a em {
    color: #3e3e3e;
    font-size: 10px;
    font-style: normal;
}

#crm-container div.ui-accordion-content {
    padding: .5em 1em !important;
}

/* Styles for Contact Summary mockup start here. dgg */
.primary {
    FONT-WEIGHT: bold
}

#crm-container .ui-tabs-panel {
    padding : 4px;
    font-size: 12px;
}

#crm-container div.contactTopBar {
    padding          : 4px;
    LINE-HEIGHT      : 1.4em;
    MARGIN           : 8px 0pt 0px;
    /*FONT-SIZE: 1.1em;*/
    background-color : #eee;
}
#crm-container div.contact_details,
#crm-container div#contactTopBar {
    padding          : 4px;
    LINE-HEIGHT      : 1.4em;
    clear:both;
}

#crm-container div.contact_panel, 
#crm-container div#contactTopBar {
    display:block;
}


#crm-container div.contact_panel *, 
#crm-container div#contactTopBar * {
    border:0px;
}

#crm-container div.contactCardLeft, #crm-container div#Top {
    WIDTH   : 49%; 
    DISPLAY : block; 
    FLOAT   : left;
}

#crm-container div.contactCardRight {
    WIDTH   : 49%; 
    DISPLAY : block; 
    FLOAT   : right;
}

#crm-container div#contactTopBar table,
#crm-container div.contact_panel table {
	margin-bottom: 4px;
	}

#crm-container div#contactTopBar .label, 
#crm-container div.contactCardLeft .label, 
#crm-container div.contactCardRight .label {
    FONT-SIZE      : 11px; 
    VERTICAL-ALIGN : top; 
    MARGIN-RIGHT   : 10px;
}

#crm-container div.contactCardLeft .grouplabel, 
#crm-container div.contactCardRight .grouplabel {
    BORDER-BOTTOM    : grey 1px solid; 
    WIDTH            : 100%; 
    FONT-SIZE        : 0.95em; 
    FONT-WEIGHT      : bold;
    background-color : #ddd;
}

#crm-container div.contact_panel .spacer {
    padding:8px;
}

#crm-container div.contact_panel td, 
#crm-container div#contactTopBar td  {
    padding:4px
    vertical-align : top;
    border-bottom: 1px solid #E2E2E2;
}



#crm-container div#contactTopBar td.label {
    width : 14%;
}

#crm-container div.contact_panel td.label {
    width : 28%;
}

#crm-container div.contact_panel td.last {
    BORDER-BOTTOM: 0px
}

#crm-container #customFields {
    width: 100%;
}

#crm-container #customFields div.contact_panel td {
    BORDER-BOTTOM  : lightgray 1px solid; 
    padding: 4px;
    vertical-align: top;
}

#crm-container #customFields div.contact_panel td.talabel {
    padding:4px 0 0 4px;
    border: 0px;
}

#crm-container #customFields .contact_panel .customFieldGroup {
    background-color : #F7F7F7;
    line-height      : 1.4em;
    padding          : 4px;
    width            : 100%;
}

#crm-container div.contact_panel .crm-address-block {
    border:1px solid #D7D7D0;
    margin-bottom:1em;
    }

#crm-container span.email-hold a:link, 
#crm-container span.email-hold a:visited, 		
#crm-container span.do-not-email a:link, 
#crm-container span.email-hold a:visited {
    color: #ff6655 !important
}


#crm-container div.buttons {
    TEXT-ALIGN       : right;
    margin           : 8px 0 0;
    padding          : 4px 4px 2px 0;
    background-color : #fff;
    border           : none;
}

#crm-container div.buttons INPUT,
#crm-container div.buttons SELECT {
    FONT-SIZE      : 0.9em; 
    VERTICAL-ALIGN : top !important
}


#crm-container div.buttons #actions {
    TEXT-ALIGN : left; 
    /*WIDTH: 89%;*/ 
    FLOAT      : left
}
#crm-container div.buttons ul#actions {
    list-style-type:none;
    padding-left:0px;
}
#crm-container div.buttons #actions li {
    float:left;
    padding:0px;
    margin:0 5px 0 0;
}


#crm-container .separator {
    border-bottom  : solid 2px #ccc;
}

/* reports */

#crm-container .report-layout {
    border           : none;
}

#crm-container .reports-header-right {
    text-align       : right;
}
/* ... */

